# soltop-oss

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/rpc/: client.rs  mod.rs  parser.rs  types.rs
src/stats/: filter.rs  mod.rs  monitor.rs  network.rs  program.rs  ring_buffer.rs
src/ui/: app.rs  mod.rs  theme.rs
