[package]
name = "soltop"
version = "0.1.0"
edition = "2021"
authors = ["Matheus Jacques <matheus.jacques@live.com"]
description = "Terminal UI for monitoring Solana program performance in real-time"
license = "MIT"
repository = "https://github.com/jacquesmats/soltop-oss"
keywords = ["solana", "monitoring", "tui", "blockchain", "terminal"]
categories = ["command-line-utilities", "visualization"]
readme = "README.md"
rust-version = "1.75"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
once_cell = "1.21.3"
ratatui = "0.29.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[lib]
name = "soltop"
path = "src/lib.rs"

[[bin]]
name = "soltop"
path = "src/main.rs"
